<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:background="#2900a69e"
                tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="100px">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_nanodegree_apps"
            android:layout_margin="@dimen/abc_action_bar_default_padding_material"
            android:typeface="sans"/>

        <Button
            android:layout_width="600px"
            android:layout_height="wrap_content"
            android:text="@string/spotify_streamer"
            android:background="@drawable/custom_button"
            android:onClick="displayToast"
            android:width="250px"
            android:layout_margin="@dimen/abc_action_bar_default_padding_material"/>

        <Button
            android:layout_width="600px"
            android:layout_height="wrap_content"
            android:text="@string/scores_app"
            android:background="@drawable/custom_button"
            android:onClick="displayToast"
            android:width="250px"
            android:layout_margin="@dimen/abc_action_bar_default_padding_material"/>

        <Button
            android:layout_width="600px"
            android:layout_height="wrap_content"
            android:text="@string/library_app"
            android:background="@drawable/custom_button"
            android:onClick="displayToast"
            android:width="250px"
            android:layout_margin="@dimen/abc_action_bar_default_padding_material"/>

        <Button
            android:layout_width="600px"
            android:layout_height="wrap_content"
            android:text="@string/build_it_bigger"
            android:background="@drawable/custom_button"
            android:onClick="displayToast"
            android:width="250px"
            android:layout_margin="@dimen/abc_action_bar_default_padding_material"/>

        <Button
            android:layout_width="600px"
            android:layout_height="wrap_content"
            android:text="@string/xyz_reader"
            android:background="@drawable/custom_button"
            android:onClick="displayToast"
            android:width="250px"
            android:layout_margin="@dimen/abc_action_bar_default_padding_material"/>

        <Button
            android:layout_width="600px"
            android:layout_height="wrap_content"
            android:text="@string/capstone_my_own_app"
            android:background="@drawable/custom_button_capstone"
            android:onClick="displayToast"
            android:width="250px"
            android:layout_margin="@dimen/abc_action_bar_default_padding_material"/>

    </LinearLayout>
</RelativeLayout>
